--- a/app/static/css/output.css
+++ b/app/static/css/output.css
@@ -572,6 +572,13 @@ video {
   letter-spacing: -0.0125rem;
 }
 
+.text-head-3{
+  font-weight: 600;
+  font-size: 1rem;
+  color: var(--fg2);
+  line-height: 1rem;
+}
+
 .text-elem-3{
   font-weight: 400;
   font-size: 0.875rem;
@@ -657,25 +664,6 @@ label{
   color: var(--fg3);
 }
 
-.group-card{
-  border-radius: 0.375rem;
-  border-width: 1px;
-  border-color: var(--primary4);
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-#view-container{
-  margin: 1rem;
-  display: flex;
-  height: 100%;
-  flex-grow: 1;
-  flex-direction: column;
-  overflow-y: auto;
-}
-
 .visible{
   visibility: visible;
 }
@@ -713,9 +701,40 @@ label{
   margin-right: 1rem;
 }
 
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .my-3{
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.mb-0{
+  margin-bottom: 0px;
+}
+
+.mb-0\.5{
+  margin-bottom: 0.125rem;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
 .ml-auto{
@@ -724,6 +743,21 @@ label{
 
 .mt-4{
   margin-top: 1rem;
+}
+
+.mt-auto{
+  margin-top: auto;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.line-clamp-1{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
 .block{
@@ -746,8 +780,24 @@ label{
   display: none;
 }
 
+.h-0{
+  height: 0px;
+}
+
 .h-12{
   height: 3rem;
+}
+
+.h-14{
+  height: 3.5rem;
+}
+
+.h-16{
+  height: 4rem;
+}
+
+.h-2{
+  height: 0.5rem;
 }
 
 .h-6{
@@ -762,10 +812,6 @@ label{
   height: 100%;
 }
 
-.max-h-\[62vh\]{
-  max-height: 62vh;
-}
-
 .w-60{
   width: 15rem;
 }
@@ -776,6 +822,11 @@ label{
 
 .w-96{
   width: 24rem;
+}
+
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-full{
@@ -790,6 +841,14 @@ label{
   max-width: 400px;
 }
 
+.max-w-md{
+  max-width: 28rem;
+}
+
+.max-w-screen-lg{
+  max-width: 1024px;
+}
+
 .max-w-screen-md{
   max-width: 768px;
 }
@@ -802,8 +861,24 @@ label{
   max-width: 24rem;
 }
 
+.flex-1{
+  flex: 1 1 0%;
+}
+
+.flex-shrink{
+  flex-shrink: 1;
+}
+
+.shrink-0{
+  flex-shrink: 0;
+}
+
 .flex-grow{
   flex-grow: 1;
+}
+
+.flex-grow-0{
+  flex-grow: 0;
 }
 
 .grow{
@@ -846,6 +921,10 @@ label{
   justify-content: space-between;
 }
 
+.gap-1{
+  gap: 0.25rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
@@ -876,6 +955,10 @@ label{
 
 .overflow-y-auto{
   overflow-y: auto;
+}
+
+.overflow-y-hidden{
+  overflow-y: hidden;
 }
 
 .rounded-lg{
@@ -999,6 +1082,10 @@ label{
   background-color: var(--primary5);
 }
 
+.bg-secondary2{
+  background-color: var(--secondary2);
+}
+
 .bg-secondary3{
   background-color: var(--secondary3);
 }
@@ -1013,6 +1100,10 @@ label{
 
 .bg-tertiary3{
   background-color: var(--tertiary3);
+}
+
+.bg-tertiary4{
+  background-color: var(--tertiary4);
 }
 
 .bg-transparent{
@@ -1053,6 +1144,11 @@ label{
   padding-bottom: 0.25rem;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1073,6 +1169,10 @@ label{
   line-height: 1rem;
 }
 
+.leading-4{
+  line-height: 1rem;
+}
+
 .text-bg9{
   color: var(--bg9);
 }
@@ -1083,6 +1183,14 @@ label{
 
 .text-fg9{
   color: var(--fg9);
+}
+
+.text-primary2{
+  color: var(--primary2);
+}
+
+.text-secondary2{
+  color: var(--secondary2);
 }
 
 .text-tertiary4{
@@ -1101,6 +1209,26 @@ label{
   color: var(--tertiary7);
 }
 
+.text-tertiary3{
+  color: var(--tertiary3);
+}
+
+.text-secondary4{
+  color: var(--secondary4);
+}
+
+.text-secondary6{
+  color: var(--secondary6);
+}
+
+.text-fg4{
+  color: var(--fg4);
+}
+
+.text-fg6{
+  color: var(--fg6);
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1112,6 +1240,98 @@ label{
 
 .outline{
   outline-style: solid;
+}
+
+.message {
+  /* @apply border border-primary4 rounded-md px-4 py-2 max-w-sm; */
+}
+
+.content{
+  max-width: 24rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: var(--primary4);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.sender{
+  margin-left: auto;
+}
+
+.recipient{
+  margin-right: auto;
+}
+
+.recipient .content{
+  background-color: var(--secondary2);
+}
+
+.sender .content{
+  background-color: var(--primary2);
+}
+
+.sender .username{
+  margin-left: auto;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.recipient .username{
+  margin-right: auto;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.sender .timestamp{
+  margin-right: auto;
+}
+
+.recipient .timestamp{
+  margin-left: auto;
+}
+
+.timestamp span{
+  font-weight: 400;
+  color: var(--fg1);
+  line-height: 1rem;
+  font-size: 0.625rem;
+}
+
+.sender .timestamp span{
+  color: var(--fg8);
+}
+
+.recipient .timestamp span{
+  color: var(--fg8);
+}
+
+.username span{
+  font-weight: 400;
+  font-size: 0.875rem;
+  color: var(--fg1);
+  line-height: 1rem;
+  color: var(--fg3);
+}
+
+.group-card{
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: var(--primary4);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+#view-container{
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  overflow-y: hidden;
+  padding: 1.5rem;
 }
 
 :root {
@@ -1164,6 +1384,7 @@ label{
   --tertiary7: hsl(342, 96%, 24%);
   --tertiary8: hsl(342, 96%, 12%);
   --tertiary9: hsl(342, 96%, 0%);
+  background-color: var(--bg1);
 }
 
 :root.dark {
@@ -1195,24 +1416,25 @@ label{
   --primary7: hsl(154, 14%, 72%);
   --primary8: hsl(154, 14%, 84%);
   --primary9: hsl(154, 14%, 96%);
-  --secondary1: hsl(228, 38%, 96%);
-  --secondary2: hsl(228, 38%, 84%);
-  --secondary3: hsl(228, 38%, 72%);
-  --secondary4: hsl(228, 38%, 60%);
+  --secondary1: hsl(228, 38%, 0%);
+  --secondary2: hsl(228, 38%, 12%);
+  --secondary3: hsl(228, 38%, 24%);
+  --secondary4: hsl(228, 38%, 36%);
   --secondary5: hsl(228, 38%, 48%);
-  --secondary6: hsl(228, 38%, 36%);
-  --secondary7: hsl(228, 38%, 24%);
-  --secondary8: hsl(228, 38%, 12%);
-  --secondary9: hsl(228, 38%, 0%);
-  --tertiary1: hsl(342, 66%, 0%);
-  --tertiary2: hsl(342, 66%, 12%);
-  --tertiary3: hsl(342, 66%, 24%);
-  --tertiary4: hsl(342, 66%, 36%);
-  --tertiary5: hsl(342, 66%, 48%);
-  --tertiary6: hsl(342, 66%, 60%);
-  --tertiary7: hsl(342, 66%, 72%);
-  --tertiary8: hsl(342, 66%, 84%);
-  --tertiary9: hsl(342, 66%, 96%);
+  --secondary6: hsl(228, 38%, 60%);
+  --secondary7: hsl(228, 38%, 72%);
+  --secondary8: hsl(228, 38%, 84%);
+  --secondary9: hsl(228, 38%, 96%);
+  --tertiary1: hsl(342, 56%, 4%);
+  --tertiary2: hsl(342, 56%, 12%);
+  --tertiary3: hsl(342, 56%, 20%);
+  --tertiary4: hsl(342, 56%, 28%);
+  --tertiary5: hsl(342, 56%, 36%);
+  --tertiary6: hsl(342, 56%, 44%);
+  --tertiary7: hsl(342, 56%, 52%);
+  --tertiary8: hsl(342, 56%, 68%);
+  --tertiary9: hsl(342, 56%, 80%);
+  background-color: var(--bg1);
 }
 
 body {
