--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,18 +15,17 @@
 <body class="bg-bg1">
 
     <div class="flex flex-col h-full w-full overflow-hidden">
-        <nav class="flex gap-8 px-4 border-b border-primary4 items-center w-full h-12 bg-primary2">
+        <nav class="flex gap-8 px-4 border-b border-primary4 items-center w-full h-14 shrink-0 bg-primary2">
             <h1>Chat</h1>
-            <a href="{{ url_for('root.index') }}">Home</a>
             <ul class="flex gap-4 ml-auto items-center">
                 <button id="theme-toggle">Toggle Theme</button> {% if session.username %}
-                <p>You are logged in as {{ session.username }}</p>
+                <span class="text-fg3 text-head-3">{{ session.username }}</span>
                 <a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}
                 <li><a href="{{ url_for('auth.signup') }}">Sign Up</a>
                     <li><a href="{{ url_for('auth.login') }}">Log In</a> {% endif %}
             </ul>
         </nav>
-        <section class="w-full flex-grow flex">
+        <section class="w-full flex-grow overflow-hidden flex">
             <div class="flash absolute top-14 right-1">
                 {% for message in get_flashed_messages() %}
                 <div class="bg-bg3 border border-fg3 rounded-md px-2 py-1">{{ message }}</div>
