--- a/app/templates/errors/error.html
+++ b/app/templates/errors/error.html
@@ -1,6 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'groups/group-base.html' %}
 
-{% block content %}
-    <h1>{{ error_message }}</h1>
-    <a href="{{ url_for('root.index') }}">Back to safety</a>
+{% block group_content %}
+<div id="view-container">
+    <div class="flex flex-col gap-2 border border-primary4 rounded-md p-4">
+
+        <h1>Error: {{ error_message }}</h1>
+        <a href="{{ url_for('root.index') }}">Back to safety</a>
+    </div>
+</div>
 {% endblock %}
