--- a/app/templates/errors/not_found.html
+++ b/app/templates/errors/not_found.html
@@ -1,5 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'groups/group-base.html' %}
 
-{% block content %}
-    <h1>Not found</h1>
+{% block group_content %}
+<div id="view-container">
+    <div class="flex flex-col gap-2 border border-primary4 rounded-md p-4">
+        <h1>Not Found</h1>
+        <a href="{{ url_for('root.index') }}">Back to safety</a>
+    </div>
+</div>
 {% endblock %}
