--- a/app/templates/groups/create.html
+++ b/app/templates/groups/create.html
@@ -7,7 +7,7 @@
     <form method="post" class="max-w-[400px] flex flex-col gap-4">
         <label for="name">Name
 
-            <input name="name" id="name" required>
+            <input name="name" autofocus id="name" required>
         </label>
         <input type="hidden" name="csrf_token" value="{{ session['csrf_token'] }}">
         <input type="submit" value="Save">
