--- a/app/templates/groups/group-base.html
+++ b/app/templates/groups/group-base.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+{% if session['user_id'] %}
     <div class="w-60 h-full bg-primary2 px-4 py-3 flex flex-col gap-6 border-r overflow-y-auto border-primary4">
         {% if user_invites|length > 0 %}
         <div class="flex flex-col gap-4">
@@ -33,6 +34,7 @@
             </ul>
         </div>
     </div>
+    {% endif %}
     <div class="flex grow h-full overflow-hidden">
        
         {% block group_content %}{% endblock %}
